# chessai2

./: .gitignore  CMakeLists.txt  conanfile.txt
include/: boardlib.h
src/: boardlib.cc  boardlib.h  chessai2.cc  zobrist.inc
test/: run_tests.cc  test_board_state.cc  test_fen_io.cc  test_fen_io.h  test_zobrist.cc
